--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.NewsAppByCompose"
         tools:targetApi="31">
         <activity
-            android:name=".DetailsActivity"
+            android:name=".detailsNews.DetailsActivity"
             android:exported="false"
             android:label="@string/title_activity_details"
             android:theme="@style/Theme.NewsAppByCompose" />
